Update JavaFXPatcher